--- a/src/app/login/profiles/client-profile/client-profile.page.html
+++ b/src/app/login/profiles/client-profile/client-profile.page.html
@@ -16,5 +16,6 @@
     <p>Contraseña: ******</p>
   </div>
 
-  <ion-button expand="full" (click)="openEditProfileModal()">Editar Perfil</ion-button>
+  <ion-button expand="full" (click)="openEditUsernameModal()">Cambiar Nombre de Usuario</ion-button>
+  <ion-button expand="full" color="secondary" (click)="openEditPasswordModal()">Cambiar Contraseña</ion-button>
 </ion-content>
