--- a/src/app/login/profiles/client-profile/client-profile.page.html
+++ b/src/app/login/profiles/client-profile/client-profile.page.html
@@ -9,13 +9,16 @@
 
 <ion-content>
   <div class="profile-container">
-    <ion-avatar class="profile-avatar">
-      <ion-icon name="person-circle-outline"></ion-icon>
-    </ion-avatar>
+    <div class="avatar-wrapper" (click)="openEditPhotoModal()">
+      <ion-avatar class="profile-avatar">
+        <img [src]="profilePhoto || '../assets/img/avatar/default-avatar.png'" alt="Foto de perfil">
+      </ion-avatar>
+      <ion-icon class="edit-icon" name="pencil-outline"></ion-icon>
+    </div>
     <h2>{{ username }}</h2>
     <p>Contraseña: ******</p>
   </div>
-
+  <ion-button expand="full" color="danger" *ngIf="profilePhoto" (click)="deleteProfilePhoto()">Eliminar Foto de Perfil</ion-button>
   <ion-button expand="full" (click)="openEditUsernameModal()">Cambiar Nombre de Usuario</ion-button>
   <ion-button expand="full" color="secondary" (click)="openEditPasswordModal()">Cambiar Contraseña</ion-button>
 </ion-content>
