--- a/src/app/login/profiles/client-profile/client-profile.page.scss
+++ b/src/app/login/profiles/client-profile/client-profile.page.scss
@@ -1,20 +1,34 @@
 .profile-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-    text-align: center;
-  }
-  
-  .profile-avatar {
-    width: 40vh; 
-    height: 40vh;
-    --border-radius: 50%;
-    ion-icon {
-      font-size: 100%;
-      width: 100%;
-      height: 100%;
-    }
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.avatar-wrapper {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.profile-avatar {
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+}
+
+.edit-icon {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  background-color: #ffffff;
+  color: #666;
+  font-size: 20px;
+  border-radius: 50%;
+  padding: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
   
