Native Network aplicada en login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -12,7 +12,7 @@
         <p style="color:black">Estado de conexión: </p>
         <!--{{ status ? 'En línea' : 'Fuera de línea'}}-->
         <ion-text *ngIf="status" color="success">En línea</ion-text>
-        <ion-text *ngIf="status == false" color="danger">Fuera de línea</ion-text>
+        <ion-text *ngIf="status === false" color="danger">Fuera de línea</ion-text>
       </div>
       <form (submit)="login()">
         <ion-item>
