correciones leves vista cliente

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
       <ion-title>Bienvenido, {{ nombreUsuario }}</ion-title>
       <ion-buttons slot="end">
         <ion-button [routerLink]="['/carrito']">
-          <ion-icon name="cart-outline" color="light"></ion-icon>
+          <ion-icon name="cart-outline" color="light" style="background-color: #8e44ad; border-radius: 50%; "></ion-icon>
         </ion-button>
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
