--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -9,7 +9,7 @@
       <ion-title>Categorías</ion-title>
       <ion-buttons slot="end">
         <ion-button [routerLink]="['/carrito']">
-          <ion-icon name="cart-outline" color="light"></ion-icon>
+          <ion-icon name="cart-outline" color="light" style="background-color: #8e44ad; border-radius: 50%;"></ion-icon>
         </ion-button>
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
