correcion login vista usuario

--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <div style="display: flex;">
-      <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" style="height: 50px; margin-right: 10px; margin-left: 5px;" [routerLink]="['/home']"
+      <img src="../assets/img/Logo/logonitsuga.png" alt="Logo" style="height: 50px; margin-right: 10px; margin-left: 5px;" [routerLink]="['/homes']"
         (click)="showLoading()">
       <ion-button (click)="goBack()">
         <ion-icon name="arrow-back-outline" color="light"></ion-icon>
