--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       </ion-header>
       <ion-content class="ion-padding">
         <ion-list>
-          <ion-item routerLink="/home" (click)="closeMenu()" (click)="showLoading()">
+          <ion-item routerLink="/homes" (click)="closeMenu()" (click)="showLoading()">
             <ion-icon slot="start" name="home-outline"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
