--- a/src/app/modals/order-details/order-details.component.html
+++ b/src/app/modals/order-details/order-details.component.html
@@ -16,6 +16,7 @@
         <h2>Pedido #{{ orderDetails.id }}</h2>
         <p>Fecha: {{ orderDetails.fecha | date: 'short' }}</p>
         <p>Total: ${{ orderDetails.total | number: '1.2-2' }}</p>
+        <p>Estado: {{ getEstadoTexto(orderDetails.estado) }}</p>
       </ion-label>
     </ion-item>
 
